@@ -3,6 +3,8 @@
 1. 'Now playing' should udate on year change.
 2. Allow certain shortcuts (e.g. inc/dec volume) to repeat every 300ms when
    pressed.
+3. Show buttons for application, player, and server sttings in 'Settings' dialog
+   toolbar if there is space.
 
 2.3.1
 -----
